# SFML_sandbox

./: CMakeLists.txt  game.cpp  game.hpp  main.cpp  set.py
examples/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt  boxcollider.cpp  boxcollider.hpp  eventhandler.cpp  eventhandler.hpp  fixed_queue.hpp  game.cpp  game.hpp  gameobject.cpp  gameobject.hpp  npc.cpp  npc.hpp  player.cpp  player.hpp  utils.hpp
